[gd_scene load_steps=39 format=3 uid="uid://edwmahel1v8p"]

[ext_resource type="Script" path="res://credits-scene/credits.gd" id="1_md8rn"]
[ext_resource type="AudioStream" uid="uid://blufj0or5ydrf" path="res://assets/music/credits(VOLATOK).mp3" id="2_orv7r"]
[ext_resource type="Script" path="res://credits-scene/FallingLeaves2D.gd" id="3_wkk7n"]
[ext_resource type="Texture2D" uid="uid://darsbo6a0amdt" path="res://assets/fallingleaves/Falling leaves animation1.png" id="4_qj87c"]
[ext_resource type="Texture2D" uid="uid://bj6p86jf3ivo5" path="res://assets/fallingleaves/Falling leaves animation2.png" id="5_2j7a7"]
[ext_resource type="Texture2D" uid="uid://cplesu8qk1ejc" path="res://assets/fallingleaves/Falling leaves animation3.png" id="6_hmhk0"]
[ext_resource type="Texture2D" uid="uid://chebmaej8anlx" path="res://assets/fallingleaves/Falling leaves animation4.png" id="7_r7xng"]
[ext_resource type="Texture2D" uid="uid://b57j83qbf2x6s" path="res://assets/fallingleaves/Falling leaves animation5.png" id="8_feo1q"]
[ext_resource type="Texture2D" uid="uid://c5ysmryd2fxne" path="res://assets/fallingleaves/Falling leaves animation6.png" id="9_kbd8x"]
[ext_resource type="Texture2D" uid="uid://dxg16bbc8lcpy" path="res://assets/fallingleaves/Falling leaves animation7.png" id="10_t2lgh"]
[ext_resource type="Texture2D" uid="uid://b2xo7dtvq7t73" path="res://assets/fallingleaves/Falling leaves animation8.png" id="11_yd8aw"]
[ext_resource type="Texture2D" uid="uid://c1bvmbxofdc48" path="res://assets/fallingleaves/Falling leaves animation9.png" id="12_5gcgq"]
[ext_resource type="Texture2D" uid="uid://cyyw3bajx4bxs" path="res://assets/fallingleaves/Falling leaves animation10.png" id="13_lpgxn"]
[ext_resource type="Texture2D" uid="uid://dtsl807hqi1ic" path="res://assets/fallingleaves/Falling leaves animation11.png" id="14_48vsh"]
[ext_resource type="Texture2D" uid="uid://bef0l74nqs3fu" path="res://assets/fallingleaves/Falling leaves animation12.png" id="15_5la7u"]
[ext_resource type="Texture2D" uid="uid://5gldn03r5lth" path="res://assets/fallingleaves/Falling leaves animation13.png" id="16_44ris"]
[ext_resource type="Texture2D" uid="uid://ckyo2ou6miksx" path="res://assets/fallingleaves/Falling leaves animation14.png" id="17_4dq8x"]
[ext_resource type="Texture2D" uid="uid://cogj04gl78fwo" path="res://assets/fallingleaves/Falling leaves animation15.png" id="18_w8ryp"]
[ext_resource type="Texture2D" uid="uid://cnvp4wc3dspwp" path="res://assets/fallingleaves/Falling leaves animation16.png" id="19_8h0tg"]
[ext_resource type="Texture2D" uid="uid://dqa5sgt1gyqg0" path="res://assets/fallingleaves/Falling leaves animation17.png" id="20_6dety"]
[ext_resource type="Texture2D" uid="uid://1cwbey8yrm7i" path="res://assets/fallingleaves/Falling leaves animation18.png" id="21_anwwf"]
[ext_resource type="Texture2D" uid="uid://d0qk5fiii7sdi" path="res://assets/fallingleaves/Falling leaves animation19.png" id="22_ulvhh"]
[ext_resource type="Texture2D" uid="uid://cubwlti1o1b8v" path="res://assets/fallingleaves/Falling leaves animation20.png" id="23_tt5be"]
[ext_resource type="Texture2D" uid="uid://g7b8h8pq21rr" path="res://assets/fallingleaves/Falling leaves animation21.png" id="24_vo68j"]
[ext_resource type="Texture2D" uid="uid://btsaral71o5bl" path="res://assets/fallingleaves/Falling leaves animation22.png" id="25_iux8p"]
[ext_resource type="Texture2D" uid="uid://bel1w8rmbcrho" path="res://assets/other/Button_back_default.png" id="26_bhqw5"]
[ext_resource type="Script" path="res://scenes/cutscenes/credits-scene2/ButtonBackDefault.gd" id="27_uuvex"]
[ext_resource type="Texture2D" uid="uid://ccy1u666m5ut3" path="res://assets/other/Button_back_highlighted.png" id="28_rxfat"]

[sub_resource type="SpriteFrames" id="SpriteFrames_df8se"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qj87c")
}, {
"duration": 1.0,
"texture": ExtResource("5_2j7a7")
}, {
"duration": 1.0,
"texture": ExtResource("6_hmhk0")
}, {
"duration": 1.0,
"texture": ExtResource("7_r7xng")
}, {
"duration": 1.0,
"texture": ExtResource("8_feo1q")
}, {
"duration": 1.0,
"texture": ExtResource("9_kbd8x")
}, {
"duration": 1.0,
"texture": ExtResource("10_t2lgh")
}, {
"duration": 1.0,
"texture": ExtResource("11_yd8aw")
}, {
"duration": 1.0,
"texture": ExtResource("12_5gcgq")
}, {
"duration": 1.0,
"texture": ExtResource("13_lpgxn")
}, {
"duration": 1.0,
"texture": ExtResource("14_48vsh")
}, {
"duration": 1.0,
"texture": ExtResource("15_5la7u")
}, {
"duration": 1.0,
"texture": ExtResource("16_44ris")
}, {
"duration": 1.0,
"texture": ExtResource("17_4dq8x")
}, {
"duration": 1.0,
"texture": ExtResource("18_w8ryp")
}, {
"duration": 1.0,
"texture": ExtResource("19_8h0tg")
}, {
"duration": 1.0,
"texture": ExtResource("20_6dety")
}, {
"duration": 1.0,
"texture": ExtResource("21_anwwf")
}, {
"duration": 1.0,
"texture": ExtResource("22_ulvhh")
}, {
"duration": 1.0,
"texture": ExtResource("23_tt5be")
}, {
"duration": 1.0,
"texture": ExtResource("24_vo68j")
}, {
"duration": 1.0,
"texture": ExtResource("25_iux8p")
}],
"loop": true,
"name": &"fall",
"speed": 22.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cwo7g"]
size = Vector2(1919, 1079)

[sub_resource type="Animation" id="Animation_6ws68"]
resource_name = "creditfade"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1.7411, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v0iak"]
_data = {
"creditfade": SubResource("Animation_6ws68")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onexa"]
size = Vector2(208, 173)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dpnkm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bo1vm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hxr41"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o30uh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s5pvf"]

[node name="credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_md8rn")
creditsFile = "res://credits-scene/example-CREDITS"
destroyOnEnd = true

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="backgroundVideo" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="musicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_orv7r")
autoplay = true

[node name="scrollingContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="titleImg" type="TextureRect" parent="scrollingContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
stretch_mode = 5

[node name="FallingLeaves2D" type="Area2D" parent="."]
script = ExtResource("3_wkk7n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="FallingLeaves2D"]
texture_filter = 1
position = Vector2(960, 540)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_df8se")
animation = &"fall"
frame_progress = 0.645107
speed_scale = 0.28

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallingLeaves2D"]
visible = false
position = Vector2(960.5, 539.5)
shape = SubResource("RectangleShape2D_cwo7g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_v0iak")
}

[node name="ButtonBackDefault" type="Sprite2D" parent="."]
position = Vector2(130, 130)
texture = ExtResource("26_bhqw5")
script = ExtResource("27_uuvex")

[node name="Area2D" type="Area2D" parent="ButtonBackDefault"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonBackDefault/Area2D"]
position = Vector2(2, -0.5)
shape = SubResource("RectangleShape2D_onexa")

[node name="Button" type="Button" parent="ButtonBackDefault"]
offset_left = -104.0
offset_top = -95.0
offset_right = 105.0
offset_bottom = 94.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_dpnkm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bo1vm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hxr41")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o30uh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s5pvf")
metadata/_edit_use_anchors_ = true

[node name="ButtonBackHighlighted" type="Sprite2D" parent="."]
position = Vector2(131, 129)
texture = ExtResource("28_rxfat")

[connection signal="finished" from="backgroundVideo" to="." method="_on_backgroundVideo_finished"]
[connection signal="finished" from="musicPlayer" to="." method="_on_musicPlayer_finished"]
[connection signal="mouse_entered" from="ButtonBackDefault/Area2D" to="ButtonBackDefault" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="ButtonBackDefault/Area2D" to="ButtonBackDefault" method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="ButtonBackDefault/Button" to="ButtonBackDefault" method="_on_button_pressed"]
